[gd_scene load_steps=44 format=3 uid="uid://dtg1krn7jfr2x"]

[ext_resource type="Script" uid="uid://dw16jnj582f4m" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="Texture2D" uid="uid://be7ko4cjmxk7p" path="res://Free/Background/Green.png" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://bmpcapo62ruw8" path="res://Free/Terrain/Terrain (16x16).png" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://cth6f7ifnapcv" path="res://main_character.tscn" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://c64mscp2bf5ls" path="res://Free/Items/Fruits/Melon.png" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://cnybgy2fulp8p" path="res://Free/Items/Fruits/Bananas.png" id="6_7mycd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lquwl"]
texture = ExtResource("2_h2yge")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
7:7/0 = 0
6:7/0 = 0
5:7/0 = 0
4:7/0 = 0

[sub_resource type="TileSet" id="TileSet_7mycd"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_lquwl")

[sub_resource type="AtlasTexture" id="AtlasTexture_7mycd"]
atlas = ExtResource("5_lquwl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_272bh"]
atlas = ExtResource("5_lquwl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw27"]
atlas = ExtResource("5_lquwl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kek77"]
atlas = ExtResource("5_lquwl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c57u"]
atlas = ExtResource("5_lquwl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxa6"]
atlas = ExtResource("5_lquwl")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg77c"]
atlas = ExtResource("5_lquwl")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycdy4"]
atlas = ExtResource("5_lquwl")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w48qg"]
atlas = ExtResource("5_lquwl")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vivmo"]
atlas = ExtResource("5_lquwl")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cqfq"]
atlas = ExtResource("5_lquwl")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaehf"]
atlas = ExtResource("5_lquwl")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_074og"]
atlas = ExtResource("5_lquwl")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cegan"]
atlas = ExtResource("5_lquwl")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82xsv"]
atlas = ExtResource("5_lquwl")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_getpj"]
atlas = ExtResource("5_lquwl")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryguw"]
atlas = ExtResource("5_lquwl")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d13ii"]
atlas = ExtResource("6_7mycd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u8w0"]
atlas = ExtResource("6_7mycd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0odxb"]
atlas = ExtResource("6_7mycd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lswn8"]
atlas = ExtResource("6_7mycd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6jrf"]
atlas = ExtResource("6_7mycd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuqvo"]
atlas = ExtResource("6_7mycd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsp4k"]
atlas = ExtResource("6_7mycd")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq58d"]
atlas = ExtResource("6_7mycd")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_seu75"]
atlas = ExtResource("6_7mycd")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htxhm"]
atlas = ExtResource("6_7mycd")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq2sk"]
atlas = ExtResource("6_7mycd")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k2k6"]
atlas = ExtResource("6_7mycd")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rl1p"]
atlas = ExtResource("6_7mycd")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok6jj"]
atlas = ExtResource("6_7mycd")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_facbu"]
atlas = ExtResource("6_7mycd")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1qrp"]
atlas = ExtResource("6_7mycd")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_come4"]
atlas = ExtResource("6_7mycd")
region = Rect2(512, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_d13ii"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mycd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kek77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c57u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg77c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycdy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w48qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vivmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cqfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaehf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_074og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cegan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82xsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_getpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryguw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d13ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u8w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0odxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lswn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6jrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuqvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsp4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq58d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seu75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq2sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k2k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rl1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok6jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_facbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1qrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_come4")
}],
"loop": true,
"name": &"explode",
"speed": 5.0
}]

[node name="Node" type="Node"]
script = ExtResource("1_1bvp3")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ig7tw")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_7mycd")
format = 2
layer_0/tile_data = PackedInt32Array(720896, 393216, 4, 786432, 393216, 5, 851968, 393216, 6, 720897, 458752, 4, 786433, 458752, 5, 851969, 458752, 6, 720898, 524288, 4, 786434, 524288, 5, 851970, 524288, 6, 720899, 393216, 4, 786435, 393216, 5, 851971, 393216, 6, 720900, 458752, 4, 786436, 458752, 5, 851972, 458752, 6, 720901, 524288, 4, 786437, 524288, 5, 851973, 524288, 6, 720902, 393216, 4, 786438, 393216, 5, 851974, 393216, 6, 720903, 458752, 4, 786439, 458752, 5, 851975, 458752, 6, 720904, 524288, 4, 786440, 524288, 5, 851976, 524288, 6, 720905, 393216, 4, 786441, 393216, 5, 851977, 393216, 6, 720906, 458752, 4, 786442, 458752, 5, 851978, 458752, 6, 720907, 524288, 4, 786443, 524288, 5, 851979, 524288, 6, 720908, 393216, 4, 786444, 393216, 5, 851980, 393216, 6, 720909, 458752, 4, 786445, 458752, 5, 851981, 458752, 6, 720910, 524288, 4, 786446, 524288, 5, 851982, 524288, 6, 720911, 393216, 4, 786447, 393216, 5, 851983, 393216, 6, 720912, 458752, 4, 786448, 458752, 5, 851984, 458752, 6, 720913, 524288, 4, 786449, 524288, 5, 851985, 524288, 6, 720914, 393216, 4, 786450, 393216, 5, 851986, 393216, 6, 720915, 458752, 4, 786451, 458752, 5, 851987, 458752, 6, 720916, 524288, 4, 786452, 524288, 5, 851988, 524288, 6, 720917, 393216, 4, 786453, 393216, 5, 851989, 393216, 6, 720918, 458752, 4, 786454, 458752, 5, 851990, 458752, 6, 720919, 524288, 4, 786455, 524288, 5, 851991, 524288, 6, 720920, 655360, 5, 786456, 655360, 5)

[node name="CharacterBody2D" parent="." instance=ExtResource("3_1bvp3")]
position = Vector2(1, 11)

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/CenterContainer"]
layout_mode = 2

[node name="Questionlabel" type="Label" parent="BoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "qwerty
"

[node name="AnswerList" type="VBoxContainer" parent="BoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TimerQueestion" type="Label" parent="BoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="BOmb" type="AnimatedSprite2D" parent="BoxContainer/CenterContainer/VBoxContainer"]
position = Vector2(-205, -109)
scale = Vector2(3.4375, 3.46875)
sprite_frames = SubResource("SpriteFrames_d13ii")
animation = &"explode"
autoplay = "default"

[node name="MyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="animation_finished" from="BoxContainer/CenterContainer/VBoxContainer/BOmb" to="." method="_on_b_omb_animation_finished"]
[connection signal="animation_looped" from="BoxContainer/CenterContainer/VBoxContainer/BOmb" to="." method="_on_b_omb_animation_looped"]
[connection signal="frame_changed" from="BoxContainer/CenterContainer/VBoxContainer/BOmb" to="." method="_on_b_omb_frame_changed"]
[connection signal="timeout" from="MyTimer" to="." method="_on_my_timer_timeout"]
